classDiagram
    class Priority {
        <<enumeration>>
        HIGH
        MEDIUM
        LOW
    }

    class SchedulePlan {
        +List~Task~ tasks
        +List~String~ reasoning
        +int remaining_minutes
    }

    class Task {
        +String id
        +String description
        +int duration_minutes
        +Priority priority
        +String frequency
        +date due_date
        +bool is_complete
        +Optional~int~ start_minute
        +int end_minute
        +Optional~Pet~ pet
        +mark_complete() Optional~Task~
        +is_overdue() bool
        +is_due_today() bool
    }

    class Pet {
        +String name
        +String species
        +String breed
        +int age
        +List~Task~ tasks
        +Optional~Owner~ owner
        +add_task(task: Task) void
        +remove_task(task_id: String) void
        +modify_task(task_id: String, updates: dict) void
        +list_tasks() List~Task~
        +filter_by_status(completed: bool) List~Task~
    }

    class Owner {
        +String name
        +String email
        +int available_minutes
        +List~Pet~ pets
        +add_pet(pet: Pet) void
        +remove_pet(pet_name: String) void
        +list_pets() List~Pet~
        +get_all_tasks() List~Task~
    }

    class Scheduler {
        +Owner owner
        +int total_minutes_available
        +Optional~SchedulePlan~ _cached_plan
        +generate_plan() SchedulePlan
        +detect_conflicts() List~Tuple~
        +filter_by_status(completed: bool) List~Task~
        +filter_by_priority(priority: Priority) List~Task~
        +sort_by_priority() List~Task~
        +sort_by_time() List~Task~
        +remaining_minutes(tasks: List~Task~) int
    }

    Owner "1" --> "1..*" Pet : owns
    Pet "0..*" --> "0..1" Owner : back-ref
    Pet "1" --> "0..*" Task : has
    Task "0..*" --> "0..1" Pet : back-ref
    Scheduler "1" --> "1" Owner : schedules for
    Scheduler "1" --> "1" SchedulePlan : produces
    Task "*" --> "1" Priority : uses
